[package]
name = "exonum-configuration"
version = "0.3.0"
authors = ["The Exonum Team <exonum@bitfury.com>"]
homepage = "https://exonum.com/doc/advanced/configuration-updater/"
repository = "https://github.com/exonum/exonum-configuration"
documentation = "https://docs.rs/exonum-configuration"
readme = "README.md"
license = "Apache-2.0"
keywords = ["exonum", "blockchain", "config", "configuration"]
categories = ["database-implementations", "config"]
description = "An Exonum service that provides functionality of modifying the global configuration."

[badges]
travis-ci = { repository = "exonum/exonum-configuration" }

[dependencies]
exonum = "0.3.0"
clap = "2.25.0"
tempdir = "0.3.5"
env_logger = "0.4.3"
log = "0.3.8"
serde = "1.0.10"
serde_derive = "1.0.10"
lazy_static = "0.2.9"
router = "0.5.1"
iron = "0.5.1"
bodyparser = "0.7.0"
params = "0.6.0"

[dev-dependencies]
pretty_assertions = "0.4.0"

[dev-dependencies.exonum-testkit]
git = "https://github.com/alekseysidorov/exonum-testkit"
rev = "6b22c464efceaa5deb15ecb2eb40a3fca24e97f4"

[patch.crates-io]
exonum = { git = "https://github.com/exonum/exonum", rev = "adb1a9ab47a356b6efb3ef73755f981f6fd0af9a" }
